--- a/src/style.css
+++ b/src/style.css
@@ -88,3 +88,52 @@ h6 {
 #__next {
   isolation: isolate;
 }
+
+/* Battleship */
+
+:root {
+  --blue-400: #42a5f5;
+  --gray-100: #f5f5f5;
+  --gray-400: #bdbdbd;
+  --gray-900: #212121;
+}
+
+body {
+  font-family:
+    Inclusive Sans,
+    Arial,
+    Helvetica,
+    sans-serif;
+  color: var(--gray-900);
+  background-color: var(--gray-100);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 40px;
+}
+
+.gameboard-container {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  width: 402px;
+  border: 1px solid var(--gray-900);
+}
+
+.ship,
+.sea {
+  width: 40px;
+  height: 40px;
+  border: 1px solid var(--gray-900);
+}
+
+.ship {
+  background: var(--gray-400);
+}
+
+.sea {
+  background: var(--blue-400);
+}
