feat: add attack container to renderGameboard function

--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,8 @@ body {
   padding: 40px;
 }
 
-.gameboard-container {
+.ship-container,
+.attack-container {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   width: 402px;
